# agent-room

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agent-teams/critique-lab/: team.json
agent-teams/default/: team.json
agent-teams/malcontent-table/: team.json
agent-templates/builder/: AGENTS.md  agent.json
agent-templates/builder/.codex/: config.toml
agent-templates/critic/: AGENTS.md  agent.json
agent-templates/critique-business/: AGENTS.md  agent.json
agent-templates/critique-risk/: AGENTS.md  agent.json
agent-templates/critique-technical/: AGENTS.md  agent.json
agent-templates/critique-user/: AGENTS.md  agent.json
agent-templates/facilitator/: AGENTS.md  agent.json
agent-templates/facilitator/.codex/: config.toml
agent-templates/hiroyuki/: AGENTS.md  agent.json
agent-templates/idea-reviser/: AGENTS.md  agent.json
agent-templates/malcontent-ops/: AGENTS.md  agent.json
agent-templates/malcontent-roaster/: AGENTS.md  agent.json
agent-templates/malcontent-user/: AGENTS.md  agent.json
agent-templates/malcontent-user/.codex/: config.toml
agent-templates/operator/: AGENTS.md  agent.json
agent-templates/researcher/: AGENTS.md  agent.json
agent-templates/synthesizer/: AGENTS.md  agent.json
controller/: AGENTS.md  agent.json
controller/.codex/: config.toml
scripts/: start_tmux_meeting.sh
share/: README.md
src/agent_room/: cli.py  mcp_server.py  models.py  server.py  store.py  templates.py  tmux_manager.py
tests/: test_mcp_server.py  test_server.py  test_store.py  test_templates.py  test_tmux_manager.py
(+11 files in other folders)
