[project]
name = "agent-room"
version = "0.1.0"
description = "Round-table meeting room for multiple Codex agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "fastmcp>=3.4.2",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agent-room = "agent_room.cli:main"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
